# producter

./: .env.example  Dockerfile  README.md  build_run.sh  entrypoint.sh  pyproject.toml
onsale/: admin.py  admin_filters.py  apps.py  models.py  service.py  views.py
onsale/fixtures/: expanded_data.json  small_test_data.json
onsale/migrations/: 0001_admin_user.py  0002_create_models.py  0003_alter_category_options_alter_tag_options_and_more.py
onsale/tests/: test_service.py  test_views.py
producter/: asgi.py  settings.py  urls.py  wsgi.py
templates/: 400.html
templates/onsale/: base.html  pagination.html  product_item.html  product_list.html  search_form.html
