[tool.poetry]
name = "producter"
version = "0.1.0"
description = ""
authors = ["Denis Kondratiev <denis.kondratev.ca@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
